@@ -3584,6 +3584,7 @@ AC_CONFIG_FILES([
 	src/server/drivers/lib/avaya-ers/Makefile
 	src/server/drivers/lib/cisco/Makefile
 	src/server/drivers/mikrotik/Makefile
+	src/server/drivers/netonix/Makefile
 	src/server/drivers/netscreen/Makefile
 	src/server/drivers/ntws/Makefile
 	src/server/drivers/ping3/Makefile
