@@ -10,6 +10,6 @@
 
 SUBDIRS = lib airespace at baystack cat2900xl catalyst cisco-esw cisco-sb \
 	  dell-pwc dlink ers8000 extreme h3c hpsw ignitenet juniper mikrotik \
-	  netscreen ntws ping3 procurve qtech-olt symbol-ws tb ubnt
+	  netonix netscreen ntws ping3 procurve qtech-olt symbol-ws tb ubnt
 
 EXTRA_DIST = Makefile.w32
