@@ -1,0 +1,8 @@
+TARGET = netonix.ndd
+TYPE = ndd
+COMPONENT = server
+SOURCES = netonix.cpp
+
+LIBS = libnxsrv.lib libnxsnmp.lib libnetxms.lib ws2_32.lib
+	  
+include ..\..\..\..\Makefile.inc.w32
