@@ -4,10 +4,12 @@
 
 - Improved audit logging
 - Improved data reconciliation between agent and server
+- Improved Grafana integration
 - Server detects changes in installed packages during configuration poll
 - Added MariaDB database driver
 - Fixed excessive CPU usage by agent on AIX
 - nxshell can connect to server on non-standard port
+- Driver for Netonix switches
 - NXSL:
 	- New methods for arrays: append, insert, pop, push, remove
 	- Table methods get and set can accept column name instead of column index
